@@ -1413,10 +1413,14 @@ sub handle_programs
 	    $xlink = $linker ? $linker : 'LINK';
 	}
 
-	local ($cygxform) = '';
+	local ($cygxform);
 	if (! $seen_cygwin32)
 	{
-	    $cygxform .= 's/^CYGWIN.*$//;';
+	    $cygxform = 's/^CYGWIN.*$//; s/^NOTCYGWIN//;';
+	}
+	else
+	{
+	    $cygxform = 's/^NOTCYGWIN.$*//; s/^CYGWIN//;';
 	}
 
 	$output_rules .=
@@ -4734,11 +4738,11 @@ sub am_install_var
     local ($cygxform);
     if (! $seen_cygwin32)
     {
-	$cygxform = 's/\@EXEEXT\@//g; s/^NOTCYGWIN.*$//;';
+	$cygxform = 's/\@EXEEXT\@//g; s/^NOTCYGWIN.*$//; s/^CYGWIN//;';
     }
     else
     {
-	$cygxform .= 's/^CYGWIN.*$//;';
+	$cygxform .= 's/^CYGWIN.*$//; s/^NOTCYGWIN//;';
     }
 
     while (@args)
