@@ -16,6 +16,13 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 @PROGRAM@: $(@XPROGRAM@_OBJECTS) $(@XPROGRAM@_DEPENDENCIES)
+## Remove program before linking.  Otherwise the link will fail if the
+## program is running somewhere.  FIXME: this could be a loss if
+## you're using an incremental linker.  Maybe we should think twice?
+## Or maybe not... sadly, incremental linkers are rarer than losing
+## systems.
+NOTCYWIN	@rm -f @PROGRAM@
+CYGWIN	@rm -f @PROGRAM@$(EXEEXT)
 	$(@XLINK@) $(@XPROGRAM@_LDFLAGS) $(@XPROGRAM@_OBJECTS) $(@XPROGRAM@_LDADD) $(LIBS)
 ## Why take such a funny approach to Cygwin32 executables?  Why not
 ## just rewrite this file to PROGRAM$(EXEEXT), and then rewrite
