@@ -1,5 +1,11 @@
 Sat Mar 22 00:06:00 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (am_install_var): Make sure to delete
+	CYGWIN/NOTCYGWIN tokens as appropriate.
+	(handle_programs): Remove NOTCYGWIN tokens as well.
+
+	* program.am: Remove executable before linking.
+
 	* texinfos.am (.texi.dvi): Look in @TEXINFODIR@ for texinfo.tex.
 	(.texinfo.dvi): Likewise.
 
